# fast-factorio-seed-finder

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
benchmark/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  algorithm.cpp  algorithm.hpp  constants.hpp  finder.cpp  finder.hpp  gradients.cpp  math.hpp  noise.cpp  noise.hpp  random.hpp  utils.hpp
image_generator/: CMakeLists.txt  main.cpp
mmp_seed_finder/: 4billion_results.txt  main.cpp  stages.cpp  stages.hpp
mods/mod/: data-final-fixes.lua
scripts/: SCANNING.md  compare_factorio.py  merge_results.py  scan.sh
seed_finders/botless_solo_any/: CMakeLists.txt  main.cpp  stages.cpp  stages.hpp
seed_finders/cli/: CMakeLists.txt  main.cpp  presets.cpp  presets.hpp  registry.cpp  registry.hpp
seed_finders/cli/finders/: peninsula.cpp  peninsula.hpp  peninsula_detect.hpp  peninsula_resources.cpp  peninsula_resources.hpp
seed_finders/example/: CMakeLists.txt  main.cpp  stages.cpp
seed_finders/mmp/: CMakeLists.txt  stages.hpp
seed_finders/peninsula/: CMakeLists.txt  main.cpp  stages.cpp  stages.hpp
seed_finders/peninsula_resources/: CMakeLists.txt  main_normal.cpp  main_railworld.cpp  stages.cpp  stages.hpp
seed_finders/solo_any/: 4billion_v2.csv  CMakeLists.txt  stages.cpp
solo_any_seed_finder/: 4billion_v3.csv  stages.cpp  stages.hpp
